--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -25,8 +25,12 @@
 			{% include "partials/_header.html.twig" %}
 		{% endblock %}
 
-
 		{% block body %}{% endblock %}
+
+		{% block footer %}
+			{% include "partials/_footer.html.twig" %}
+		{% endblock %}
+
 	</body>
 </html>
 
