--- a/templates/pages/post/post.html.twig
+++ b/templates/pages/post/post.html.twig
@@ -8,8 +8,29 @@
 
 {% block body %}
 	<div class="container mt-4">
-		<div class="jumbotron">
-			<h1 class="display-4">SportNet - Les annonces sportifs</h1>
-		</div>
+		<h1>Les annonces</h1>
+
+		<table class="table table-hover">
+			<thead>
+				<tr>
+					<th scope="col">Numéro</th>
+					<th scope="col">Titre</th>
+					<th scope="col">Description</th>
+					<th scope="col">Date de création</th>
+				</tr>
+			</thead>
+			<tbody>
+				{% for ingredient in ingredient %}
+					<tr class="table-primary">
+						<th scope="row">{{ ingredient.id }}</th>
+						<td>{{ ingredient.name }}</td>
+						<td>{{ ingredient.price }}</td>
+						<td>{{ ingredient.createdAt |date("d/m/Y") }}</td>
+					</tr>
+				{% endfor %}
+			</tbody>
+		</table>
+
+
 	</div>
 {% endblock %}
