--- a/templates/pages/post/post.html.twig
+++ b/templates/pages/post/post.html.twig
@@ -7,30 +7,28 @@
 {% endblock %}
 
 {% block body %}
-	<div class="container mt-4">
+	<div class="container mt-4 text-center">
 		<h1>Les annonces</h1>
+	</div>
 
-		<table class="table table-hover">
-			<thead>
-				<tr>
-					<th scope="col">Numéro</th>
-					<th scope="col">Titre</th>
-					<th scope="col">Description</th>
-					<th scope="col">Date de création</th>
-				</tr>
-			</thead>
-			<tbody>
-				{% for ingredient in ingredient %}
-					<tr class="table-primary">
-						<th scope="row">{{ ingredient.id }}</th>
-						<td>{{ ingredient.name }}</td>
-						<td>{{ ingredient.price }}</td>
-						<td>{{ ingredient.createdAt |date("d/m/Y") }}</td>
-					</tr>
-				{% endfor %}
-			</tbody>
-		</table>
-
-
+	<div class="container">
+		<div class="row align-items-start">
+			{% for post in post %}
+				<div class="card m-2" style="width: 18rem;">
+					<div class="card-body">
+						<h4 class="card-title text-center">{{ post.title }}</h4>
+						<p class="card-text">{{ post.description }}</p>
+						<h6 class="card-title">Quels Sport :
+							{{ post.sport }}</h6>
+						<h6 class="card-title">Quels ville :
+							{{ post.city }}</h6>
+						<h6 class="card-title  pb-2">Créer le :
+							{{ post.createdAt |date("d/m/Y")}}</h6>
+						<a href="#" class="btn btn-primary">Voir l'annonce</a>
+					</div>
+				</div>
+			{% endfor %}
+		</div>
 	</div>
 {% endblock %}
+
