--- a/templates/partials/_header.html.twig
+++ b/templates/partials/_header.html.twig
@@ -7,7 +7,10 @@
 		<div class="collapse navbar-collapse" id="navbarSupportedContent">
 			<ul class="navbar-nav me-auto mb-2 mb-lg-0">
 				<li class="nav-item">
-					<a class="nav-link active" aria-current="page" href="#">Accueil</a>
+					<a class="nav-link active" aria-current="page" href="{{ path('home.index')}}">Accueil</a>
+				</li>
+								<li class="nav-item">
+					<a class="nav-link active" aria-current="page" href="{{ path('post.index')}}">Les annonces</a>
 				</li>
 			</ul>
 		</div>
