Importation des villes de france via un fichier csv (pas fini)

--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -6,13 +6,18 @@
 {% endblock %}
 
 {% block body %}
-	<div class="container mt-4">
-		<div class="jumbotron">
-			<h1 class="display-4">Bienvenue sur SportNet</h1>
-			<p class="lead">SportNet est une application de réseau social entre sportif</p>
-			<hr class="my-4">
-			<p>Pour commencer rendez-vous sur la page d'inscription.</p>
-			<a class="btn btn-dark btn-lg" href="#" role="button">Inscription</a>
+	<!-- Background image -->
+	<div class="p-5 text-center bg-image">
+		<div class="mask pb-5">
+			<div class="d-flex justify-content-center align-items-center h-100">
+				<div class="text-white">
+					<h1 class="mb-3">SPORTNET</h1>
+					<h4 class="mb-3">Trouve toi un partenaire !</h4>
+				</div>
+			</div>
 		</div>
 	</div>
+	<!-- Background image -->
+
 {% endblock %}
+
