--- a/templates/pages/post/post.html.twig
+++ b/templates/pages/post/post.html.twig
@@ -10,12 +10,23 @@
 	<div class="container mt-4 text-center">
 		<h1>Les annonces</h1>
 		<div class="count mt-4">
+
+			{% for message in app.flashes('success') %}
+				<div class="alert alert-success mt-4">
+					{{ message }}
+				</div>
+			{% endfor %}
+
 			<h6>
 				Il y a
 				{{ post.getTotalItemCount }}
 				Annonces au total</h6>
 		</div>
+		<a href="{{ path('post.new')}}" class="btn btn-primary">
+			Créer une annonce
+		</a>
 	</div>
+
 
 	<div class="container">
 		<div class="row align-items-start">
@@ -26,16 +37,20 @@
 						<p class="card-text">{{ post.description }}</p>
 						<h6 class="card-title">Quels Sport :
 							{{ post.sport }}</h6>
+						<h6 class="card-title">Quels villes :
+							{{ post.city }}</h6>
 						<h6 class="card-title  pb-2">Créer le :
 							{{ post.createdAt |date("d/m/Y")}}</h6>
 						<a href="#" class="btn btn-primary">Voir l'annonce</a>
+						<a href="{{ path('post.edit', {id: post.id} )}}" class='btn btn-warning'>Modifier</a>
+						<a href="{{ path('post.delete', {id: post.id} )}}" class='btn btn-danger'>Supprimer</a>
 					</div>
 				</div>
 			{% endfor %}
 		</div>
-			<div class="navigation d-flex justify-content-center mt-4">
-				{{ knp_pagination_render(post) }}
-			</div>
+		<div class="navigation d-flex justify-content-center mt-4">
+			{{ knp_pagination_render(post) }}
+		</div>
 	</div>
 {% endblock %}
 
