champ level et nbPersonne fait

--- a/templates/pages/post/new.html.twig
+++ b/templates/pages/post/new.html.twig
@@ -24,6 +24,10 @@
 				{{ form_errors(form.description) }}
 			</div>
 		</div>
+				{{ form_row(form.level)}}
+
+		{{ form_row(form.numberofperson)}}
+
 		{{ form_row(form.city)}}
 
 
