--- a/templates/pages/post/post.html.twig
+++ b/templates/pages/post/post.html.twig
@@ -35,6 +35,10 @@
 					<div class="card-body">
 						<h4 class="card-title text-center">{{ post.title }}</h4>
 						<p class="card-text">{{ post.description }}</p>
+						<h6 class="card-title">Quels level :
+							{{ post.level }}</h6>
+						<h6 class="card-title">Combiens de personne :
+							{{ post.numberOfPerson }}</h6>
 						<h6 class="card-title">Quels Sport :
 							{{ post.sport }}</h6>
 						<h6 class="card-title">Quels villes :
