--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -8,16 +8,24 @@
 {% block body %}
 	<!-- Background image -->
 	<div class="p-5 text-center bg-image">
+
+
 		<div class="mask pb-5">
 			<div class="d-flex justify-content-center align-items-center h-100">
 				<div class="text-white">
 					<h1 class="mb-3">SPORTNET</h1>
 					<h4 class="mb-3">Trouve toi un partenaire !</h4>
+
 				</div>
 			</div>
 		</div>
 	</div>
 	<!-- Background image -->
+
+	<div class="container">
+	<h1>tesgdb</h1>
+		<img src="{{asset('images/paysage.jpg')}}" width="50px" alt="">
+	</div>
 
 {% endblock %}
 
