ajout fichier css

--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -12,7 +12,7 @@
 
 		<div class="mask pb-5">
 			<div class="d-flex justify-content-center align-items-center h-100">
-				<div class="text-white">
+				<div class="text-black">
 					<h1 class="mb-3">SPORTNET</h1>
 					<h4 class="mb-3">Trouve toi un partenaire !</h4>
 
@@ -21,11 +21,5 @@
 		</div>
 	</div>
 	<!-- Background image -->
-
-	<div class="container">
-	<h1>tesgdb</h1>
-		<img src="{{asset('images/paysage.jpg')}}" width="50px" alt="">
-	</div>
-
 {% endblock %}
 
