--- a/templates/pages/post/post.html.twig
+++ b/templates/pages/post/post.html.twig
@@ -36,7 +36,7 @@
 						<h4 class="card-title text-center">{{ post.title }}</h4>
 						<p class="card-text">{{ post.description }}</p>
 						<hr>
-						<p class="card-title">Je cherche
+						<p class="card-title">Je recherche
 							{{ post.numberOfPerson }}
 							personnes de niveau
 							{{ post.level }}
