--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -6,20 +6,17 @@
 {% endblock %}
 
 {% block body %}
-	<!-- Background image -->
+<div class="container-fluid bgImg">
 	<div class="p-5 text-center bg-image">
-
-
 		<div class="mask pb-5">
 			<div class="d-flex justify-content-center align-items-center h-100">
-				<div class="text-black">
+				<div class="text-light">
 					<h1 class="mb-3">SPORTNET</h1>
 					<h4 class="mb-3">Trouve toi un partenaire !</h4>
-
 				</div>
 			</div>
 		</div>
 	</div>
-	<!-- Background image -->
+</div>
 {% endblock %}
 
