Sécurité : User & Hachage de mot de passe (Commenté)

--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -6,17 +6,37 @@
 {% endblock %}
 
 {% block body %}
-<div class="container-fluid bgImg">
-	<div class="p-5 text-center bg-image">
-		<div class="mask pb-5">
-			<div class="d-flex justify-content-center align-items-center h-100">
-				<div class="text-light">
-					<h1 class="mb-3">SPORTNET</h1>
-					<h4 class="mb-3">Trouve toi un partenaire !</h4>
+	<div class="container-fluid bgImg">
+		<div class="p-5 text-center bg-image">
+			<div class="mask pb-5">
+				<div class="d-flex justify-content-center align-items-center h-100">
+					<div class="text-light title">
+						<h1 class="mb-3">SPORTNET</h1>
+						<h4 class="mb-3">Trouve toi un partenaire !</h4>
+					</div>
 				</div>
 			</div>
 		</div>
+		<div class="container">
+			<form class="d-flex">
+				<input class="form-control border border-right-0" type="search" placeholder="Search" aria-label="Search">
+				<input class="form-control border-left-0" type="search" placeholder="Search" aria-label="Search">
+				<input class="form-control" type="search" placeholder="Search" aria-label="Search">
+				<input class="form-control" type="search" placeholder="Search" aria-label="Search">
+				<button class="btn btn-outline-success" type="submit">Search</button>
+			</form>
+		</div>
 	</div>
-</div>
+
+	<div class="container-fluid">
+		<div class="row bg-dark">
+			<h1>sdzefvdbg</h1>
+			<h1>sdzefvdbg</h1>
+			<h1>sdzefvdbg</h1>
+			<h1>sdzefvdbg</h1>
+			<h1>sdzefvdbg</h1>
+			<h1>sdzefvdbg</h1>
+		</div>
+	</div>
 {% endblock %}
 
