--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,15 +1,23 @@
 *{
   margin: 0;
   padding: 0;
-  font-family: 'Poppins', sans-serif;
   box-sizing: border-box;
 }
+
+
+   /* HOME PAGE */
 
 .bgImg{
   width: 50%;
   min-height: 50vh;
-  background-image: linear-gradient(rgba(9, 0, 77, 0.65),rgba(9,0,77,0.65)), url(../images/jogging.jpg);
+  background-image: url(../images/jogging.jpg);
   background-size: cover;
   background-position: center;
   padding: 10px 8%;
 }
+
+.title{
+padding-top: 100px;
+font-weight: bold;
+}
+
