--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -17,25 +17,11 @@
 				</div>
 			</div>
 		</div>
-		<div class="container">
-			<form class="d-flex">
-				<input class="form-control border border-right-0" type="search" placeholder="Search" aria-label="Search">
-				<input class="form-control border-left-0" type="search" placeholder="Search" aria-label="Search">
-				<input class="form-control" type="search" placeholder="Search" aria-label="Search">
-				<input class="form-control" type="search" placeholder="Search" aria-label="Search">
-				<button class="btn btn-outline-success" type="submit">Search</button>
+		<div class="container text-center">
+			<form class="d-flex form">
+				<input class="form-control" type="search" placeholder="Quelle est votre recherche" aria-label="Search">
+				<button class="btn btn-warning" type="submit">Rechercher</button>
 			</form>
-		</div>
-	</div>
-
-	<div class="container-fluid">
-		<div class="row bg-dark">
-			<h1>sdzefvdbg</h1>
-			<h1>sdzefvdbg</h1>
-			<h1>sdzefvdbg</h1>
-			<h1>sdzefvdbg</h1>
-			<h1>sdzefvdbg</h1>
-			<h1>sdzefvdbg</h1>
 		</div>
 	</div>
 {% endblock %}
