--- a/templates/pages/security/login.html.twig
+++ b/templates/pages/security/login.html.twig
@@ -8,6 +8,12 @@
 		<h1>
 			Formulaire de connexion</h1>
 
+						{% for message in app.flashes('success') %}
+				<div class="alert alert-success mt-4">
+					{{ message }}
+				</div>
+			{% endfor %}
+
 		{% if error %}
 			<div class="alert alert-danger mt-4">
 				{{ error.messageKey|trans(error.messageData, 'security') }}
