--- a/templates/partials/_header.html.twig
+++ b/templates/partials/_header.html.twig
@@ -1,18 +1,47 @@
 <nav class="navbar navbar-expand-lg bg-light">
 	<div class="container-fluid">
-		<a class="navbar-brand" href="#">SportNet</a>
-		<button class="navbar-toggler" type="button" data-coreui-toggle="collapse" data-coreui-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+		<a class="navbar-brand" href="#">Navbar</a>
+		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 		</button>
-		<div class="collapse navbar-collapse" id="navbarSupportedContent">
-			<ul class="navbar-nav me-auto mb-2 mb-lg-0">
+		<div class="collapse navbar-collapse" id="navbarColor02">
+			<ul class="navbar-nav me-auto">
 				<li class="nav-item">
 					<a class="nav-link active" aria-current="page" href="{{ path('home.index')}}">Accueil</a>
 				</li>
-								<li class="nav-item">
-					<a class="nav-link active" aria-current="page" href="{{ path('post.index')}}">Les annonces</a>
-				</li>
+				{% if app.user %}
+					<li class="nav-item">
+						<a class="nav-link active" aria-current="page" href="{{ path('post.index')}}">Les annonces</a>
+					</li>
+				{% endif %}
 			</ul>
+			<div class="d-flex">
+				<ul class="navbar-nav me-auto">
+					{% if app.user %}
+						<li class="nav-item dropdown" style="margin-right: 10rem;">
+							<a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">nom</a>
+							<div class="dropdown-menu">
+								<a class="dropdown-item" href="#">Modifier mes informations</a>
+								<a class="dropdown-item" href="#">Modifier mon mot de passe</a>
+								<div class="dropdown-divider"></div>
+								<a class="dropdown-item" href="{{ path('security.logout') }}">Déconnexion</a>
+							</div>
+						</li>
+					{% else %}
+						<li class="nav-item">
+							<a class="nav-link active" href="{{ path('security.login') }}">Connexion
+								<span class="visually-hidden">(current)</span>
+							</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link active" href="{{ path('security.registration') }}">Inscription
+								<span class="visually-hidden">(current)</span>
+							</a>
+						</li>
+					{% endif %}
+				</ul>
+			</div>
 		</div>
 	</div>
 </nav>
+
