--- a/templates/partials/_header.html.twig
+++ b/templates/partials/_header.html.twig
@@ -21,7 +21,7 @@
 						<li class="nav-item dropdown" style="margin-right: 10rem;">
 							<a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">nom</a>
 							<div class="dropdown-menu">
-								<a class="dropdown-item" href="#">Modifier mes informations</a>
+								<a class="dropdown-item" href="{{ path('user.edit', {id : app.user.id}) }}">Modifier mes informations</a>
 								<a class="dropdown-item" href="#">Modifier mon mot de passe</a>
 								<div class="dropdown-divider"></div>
 								<a class="dropdown-item" href="{{ path('security.logout') }}">Déconnexion</a>
