--- a/templates/pages/post/post.html.twig
+++ b/templates/pages/post/post.html.twig
@@ -44,7 +44,7 @@
 							{{ post.sport }}
 							à
 							{{ post.city }}</p>
-						<a href="#" class="btn btn-primary  btn-sm m-1">Voir l'annonce</a>
+						<a href="{{ path('post.show', {id: post.id} )}}" class="btn btn-primary  btn-sm m-1">Voir l'annonce</a>
 						<a href="{{ path('post.edit', {id: post.id} )}}" class='btn btn-warning m-1 btn-sm'>Modifier</a>
 						<a href="{{ path('post.delete', {id: post.id} )}}" class='btn btn-danger m-1 btn-sm'>Supprimer</a>
 						<p class="card-text text-secondary pb-2">Créer le
