--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -26,13 +26,9 @@
 	</div>
 	<div class="posts">
 		<h2 class="mt-4">Post de la communauté</h2>
-
-
 		{% for post in post %}
-			<div class="container text-center">
-				<div class="row">
 
-					<div class="col">
+
 						<div class="card m-2" style="width: 18rem;">
 							<div class="card-body">
 								<h4 class="card-title text-center">{{ post.title }}</h4>
@@ -50,8 +46,12 @@
 									{{ post.user }}</p>
 
 								<a href="{{ path('post.show', {id: post.id} )}}" class="btn btn-primary  btn-sm m-1">Voir l'annonce</a>
+														{% if post.user == app.user %}
+
 								<a href="{{ path('post.edit', {id: post.id} )}}" class='btn btn-warning m-1 btn-sm'>Modifier</a>
 								<a href="{{ path('post.delete', {id: post.id} )}}" value="Delete post" onclick="confirm('Etes-vous sure de vouloir supprimer ce post') || event.preventDefault()" class='btn btn-danger m-1 btn-sm'>Supprimer</a>
+														{% endif %}
+
 								<p class="card-text text-secondary pb-2">Créer le
 									{{ post.createdAt |date("d/m/Y")}}</p>
 							</div>
@@ -60,5 +60,6 @@
 				</div>
 			</div>
 		{% endfor %}
+
 	{% endblock %}
 
