--- a/templates/pages/post/post.html.twig
+++ b/templates/pages/post/post.html.twig
@@ -48,8 +48,11 @@
 							{{ post.user }}</p>
 
 						<a href="{{ path('post.show', {id: post.id} )}}" class="btn btn-primary  btn-sm m-1">Voir l'annonce</a>
+						{% if post.user == app.user %}
 						<a href="{{ path('post.edit', {id: post.id} )}}" class='btn btn-warning m-1 btn-sm'>Modifier</a>
 						<a href="{{ path('post.delete', {id: post.id} )}}" value="Delete post" onclick="confirm('Etes-vous sure de vouloir supprimer ce post') || event.preventDefault()" class='btn btn-danger m-1 btn-sm'>Supprimer</a>
+						{% endif %}
+
 						<p class="card-text text-secondary pb-2">Créer le
 							{{ post.createdAt |date("d/m/Y")}}</p>
 					</div>
