--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -24,42 +24,39 @@
 			</form>
 		</div>
 	</div>
-	<div class="posts">
-		<h2 class="mt-4">Post de la communauté</h2>
-		{% for post in post %}
 
+	<div class="container">
+		<div class="row align-items-start">
+			<h2 class="mt-4">Les 3 dernières annonces créer</h2>
+			{% for post in post %}
+				<div class="card m-2" style="width: 18rem;">
+					<div class="card-body">
+						<h4 class="card-title text-center">{{ post.title }}</h4>
+						<p class="card-text">{{ post.description }}</p>
+						<hr>
+						<p class="card-title">Je recherche
+							{{ post.numberOfPerson }}
+							personnes de niveau
+							{{ post.level }}
+							pour pratiqué le
+							{{ post.sport }}
+							à
+							{{ post.city }}</p>
+						<p>Auteur :
+							{{ post.user }}</p>
 
-						<div class="card m-2" style="width: 18rem;">
-							<div class="card-body">
-								<h4 class="card-title text-center">{{ post.title }}</h4>
-								<p class="card-text">{{ post.description }}</p>
-								<hr>
-								<p class="card-title">Je recherche
-									{{ post.numberOfPerson }}
-									personnes de niveau
-									{{ post.level }}
-									pour pratiqué le
-									{{ post.sport }}
-									à
-									{{ post.city }}</p>
-								<p>Auteur :
-									{{ post.user }}</p>
+						<a href="{{ path('post.show', {id: post.id} )}}" class="btn btn-primary  btn-sm m-1">Voir l'annonce</a>
+						{% if post.user == app.user %}
+							<a href="{{ path('post.edit', {id: post.id} )}}" class='btn btn-warning m-1 btn-sm'>Modifier</a>
+							<a href="{{ path('post.delete', {id: post.id} )}}" value="Delete post" onclick="confirm('Etes-vous sure de vouloir supprimer ce post') || event.preventDefault()" class='btn btn-danger m-1 btn-sm'>Supprimer</a>
+						{% endif %}
 
-								<a href="{{ path('post.show', {id: post.id} )}}" class="btn btn-primary  btn-sm m-1">Voir l'annonce</a>
-														{% if post.user == app.user %}
-
-								<a href="{{ path('post.edit', {id: post.id} )}}" class='btn btn-warning m-1 btn-sm'>Modifier</a>
-								<a href="{{ path('post.delete', {id: post.id} )}}" value="Delete post" onclick="confirm('Etes-vous sure de vouloir supprimer ce post') || event.preventDefault()" class='btn btn-danger m-1 btn-sm'>Supprimer</a>
-														{% endif %}
-
-								<p class="card-text text-secondary pb-2">Créer le
-									{{ post.createdAt |date("d/m/Y")}}</p>
-							</div>
-						</div>
+						<p class="card-text text-secondary pb-2">Créer le
+							{{ post.createdAt |date("d/m/Y")}}</p>
 					</div>
 				</div>
-			</div>
-		{% endfor %}
-
-	{% endblock %}
+			{% endfor %}
+		</div>
+	</div> 
+{% endblock %}
 
